--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.2",
     "expo": "~46.0.9",
     "expo-font": "~10.2.0",
     "expo-linear-gradient": "~11.4.0",
